[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-mcp"
dynamic = ["version"]
description = "OpenTelemetry MCP (Model Context Protocol) instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.8, <=3.13"
authors = [
  { name = "LoongSuite Python Agent Authors"},
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  # "opentelemetry-api <= 1.35.0",
  "wrapt",
]

[project.optional-dependencies]
instruments = [
  "mcp >= 1.3.0, <= 1.13.1",
]
test = [
  "opentelemetry-sdk",
  "fastmcp>=2.10.1",
  "pytest>=8.4.1",
  "pytest-asyncio>=1.0.0",
  "websockets",
  "pytest-cov",
  "Pillow",
  "mcp",
  "starlette",
  "pydantic",
]
type-check = []

[project.entry-points.opentelemetry_instrumentor]
mcp = "opentelemetry.instrumentation.mcp:MCPInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-mcp"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/mcp/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "src",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.black]
line-length = 120

[tool.pytest.ini_options]
log_cli = true
xfail_strict = true
addopts = """
    --color=yes
"""
filterwarnings = [
    "ignore:pkg_resources is deprecated as an API:UserWarning::"
]
[tool.basedpyright]
reportPossiblyUnboundVariable = "none"
[tool.cursorpyright]
reportPossiblyUnboundVariable = "none"
[tool.pyright]
reportPossiblyUnboundVariable = "none"
typeCheckingMode = "off"
