[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-microsoft-agent-framework"
dynamic = ["version"]
description = "LoongSuite Microsoft Agent Framework instrumentation"
readme = "README.rst"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
  { name = "LoongSuite Python Agent Authors", email = "caishipeng.csp@alibaba-inc.com" },
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
]
dependencies = [
  "opentelemetry-api ~= 1.37",
  "opentelemetry-instrumentation >= 0.58b0",
  "opentelemetry-semantic-conventions >= 0.58b0",
  "opentelemetry-util-genai",
  "wrapt >= 1.14, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
  "agent-framework-core >= 1.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
microsoft_agent_framework = "opentelemetry.instrumentation.microsoft_agent_framework:MicrosoftAgentFrameworkInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-microsoft-agent-framework"
Repository = "https://github.com/alibaba/loongsuite-python"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/microsoft_agent_framework/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
  "/README.rst",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]

[tool.loongsuite.readme]
supported-packages = ["agent-framework-core >= 1.0.0"]
