[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-qwen-agent"
dynamic = ["version"]
description = "LoongSuite Qwen-Agent Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
    { name = "LoongSuite Python Agent Authors", email = "caishipeng.csp@alibaba-inc.com" },
    { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opentelemetry-api ~= 1.37",
    "opentelemetry-instrumentation >= 0.58b0",
    "opentelemetry-semantic-conventions >= 0.58b0",
    "opentelemetry-util-genai",
    "wrapt >= 1.17.3, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
    "qwen-agent >= 0.0.20",
]

test = [
    "pytest ~= 8.0",
    "pytest-cov ~= 4.1.0",
    "qwen-agent >= 0.0.20",
    "vcrpy",
    "pytest-vcr",
]

[project.entry-points.opentelemetry_instrumentor]
qwen_agent = "opentelemetry.instrumentation.qwen_agent:QwenAgentInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-qwen-agent"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/qwen_agent/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
