[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "loongsuite-instrumentation-wildtool"
dynamic = ["version"]
description = "LoongSuite WildToolBench Instrumentation"
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    { name = "LoongSuite Python Agent Authors", email = "caishipeng.csp@alibaba-inc.com" },
    { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "opentelemetry-api ~= 1.37",
    "opentelemetry-instrumentation >= 0.58b0",
    "opentelemetry-semantic-conventions >= 0.58b0",
    "opentelemetry-util-genai",
    "wrapt >= 1.17.3, < 2.0.0",
]

[project.optional-dependencies]
instruments = [
    "openai >= 1.0.0",
]

test = [
    "pytest ~= 8.0",
    "pytest-cov ~= 4.1.0",
    "pytest-forked >= 1.6.0",
    "openai >= 1.0.0",
]

[project.entry-points.opentelemetry_instrumentor]
wildtool = "opentelemetry.instrumentation.wildtool:WildToolInstrumentor"

[project.urls]
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/instrumentation-loongsuite/loongsuite-instrumentation-wildtool"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/instrumentation/wildtool/version.py"

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
