[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "opentelemetry-util-genai"
dynamic = ["version"]
# LoongSuite Extension
description = "LoongSuite GenAI Utils"
readme = "README-loongsuite.rst"
license = "Apache-2.0"
requires-python = ">=3.9"
authors = [
  # LoongSuite Extension
  { name = "Minghui Zhang", email = "zmh1625lumian@gmail.com" },
  { name = "Tao Yu", email = "yt348264@alibaba-inc.com" },
  { name = "OpenTelemetry Authors", email = "cncf-opentelemetry-contributors@lists.cncf.io" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: Apache Software License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
dependencies = [
  "opentelemetry-instrumentation ~= 0.58b0",
  "opentelemetry-semantic-conventions ~= 0.58b0",
  "opentelemetry-api>=1.31.0",
]

[project.entry-points.opentelemetry_genai_completion_hook]
upload = "opentelemetry.util.genai._upload:upload_completion_hook"

[project.entry-points.opentelemetry_genai_multimodal_uploader]
fs = "opentelemetry.util.genai._multimodal_upload.fs_uploader:fs_uploader_hook"

[project.entry-points.opentelemetry_genai_multimodal_pre_uploader]
fs = "opentelemetry.util.genai._multimodal_upload.pre_uploader:fs_pre_uploader_hook"

[project.optional-dependencies]
test = ["pytest>=7.0.0"]
upload = ["fsspec>=2025.9.0"]
multimodal_upload = ["httpx", "fsspec>=2025.9.0"]
audio_conversion = ["numpy", "soundfile"]

[project.urls]
# LoongSuite Extension
Homepage = "https://github.com/alibaba/loongsuite-python-agent/tree/main/util/opentelemetry-util-genai"
Repository = "https://github.com/alibaba/loongsuite-python-agent"

[tool.hatch.version]
path = "src/opentelemetry/util/genai/version.py"

[tool.hatch.build.targets.sdist]
include = [
  "/src",
  "/tests",
]

[tool.hatch.build.targets.wheel]
packages = ["src/opentelemetry"]
